tests/invalid/return_type_mismatch/main.py
def foo() -> int:
    return 1.0
